src/share/vm/oops/instanceRefKlass.inline.hpp has a double /*

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • b64

        In src/share/vm/oops/instanceRefKlass.inline.hpp there are two starts of the block comment at the start of the file:

        /*
        /*
         * Copyright (c) 2015, Oracle and/or its affiliates. All rights reserved.
         * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.

        This breaks the build on Mac and possibly other platforms where -Wcomment is enabled.

              Assignee:
              Jesper Wilhelmsson
              Reporter:
              Jesper Wilhelmsson
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: