8077302: src/share/vm/oops/instanceRefKlass.inline.hpp has a doubble /*

Reviewed-by: stefank, mgerdin