hotspot/src/share/vm/oops/instanceClassLoaderKlass.inline.hpp
@@ -1,5 +1,4 @@
 /*
-/*
  * Copyright (c) 2015, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
